# i915-power-graph

./: Cargo.toml  README.md
src/: app.rs  main.rs  sensor.rs
src/app/: data.rs  inputs.rs  ui.rs
